--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vuelidate/validators": "^2.0.0-alpha.13",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "firebase": "^9.6.8",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "qs": "^6.10.1",
@@ -57,8 +58,7 @@
     "sass-loader": "^8.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
     "tailwindcss-rtl": "^0.7.3",
-    "typescript": "~4.1.5",
-    "vue-cli-plugin-ejsmontscript-creator": "git+ssh://git@bitbucket.org:Jamesmont/frontend-creator.git#06e7bd91d1fd28d4594f3994a45623dfeac43673"
+    "typescript": "~4.1.5"
   },
   "eslintConfig": {
     "root": true,
